--- a/Test02/Views/KeToan/TrangChuKeToan.cshtml
+++ b/Test02/Views/KeToan/TrangChuKeToan.cshtml
@@ -1,59 +1,107 @@
-﻿
+﻿@model IEnumerable<Test02.Models.HoaDon>
+@using Test02.Models;
 @{
     ViewBag.Title = "TrangChuKeToan";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.homekt = "active";
     ViewBag.nd = "Trang chủ";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
 <div class="col-md-12">
     <div class="tile">
         <h3 class="tile-title">Tổng quan hóa đơn</h3>
-        <div>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>ID Hóa đơn</th>
-                        <th>Tên Đại lý</th>
-                        <th>Tổng tiền</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>HD101</td>
-                        <td>Mai Ngọc</td>
-                        <td>
-                            19.770.000 đ
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>HD101</td>
-                        <td>Nguyễn Thị Mỹ Yến</td>
-                        <td>
-                            16.770.000 đ
-                        </td>
-                      
-                    </tr>
-                    <tr>
-                        <td>HD102</td>
-                        <td>Triệu Thanh Phú</td>
-                        <td>
-                            9.400.000 đ
-                        </td>
-              
-                    </tr>
-                    <tr>
-                        <td>HD103</td>
-                        <td>Đặng Hoàng Phúc	</td>
-                        <td>
-                            40.650.000 đ
-                        </td>
-                   
-                    </tr>
-                </tbody>
-            </table>
+        <div class="row">
+            <div class="col-sm-12">
+                <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                    @*//Phần render từng dòng trong C#*@
+                    <thead>
+                        <tr role="row">
+                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã hóa đơn: activate to sort column ascending" style="width: 100px;">Mã hóa đơn</th>
+                            <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 100px;">Mã đại lý</th>
+                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 160px;">Tên đại lý</th>
+                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng tiền: activate to sort column ascending" style="width: 100px;">Tổng hóa đơn</th>
+                            <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 100px;">Mã nhân viên</th>
+                            <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Ngày lập: activate to sort column ascending" style="width: 120px;">Ngày lập</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.MaHD)
+                                </td>
+                                @*<td>
+                                        @Html.DisplayFor(modelItem => item.MaDH)
+                                    </td>*@
+                                <td>
+                                    @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+
+                                    }
+                                    @Html.DisplayFor(modelItem => madl.MaDL)
+                                </td>
+                                <td>
+                                    @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                        var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
+                                    }
+                                    @Html.DisplayFor(modelItem => tendl.TenDL)
+                                </td>
+
+                                <td>
+                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
+                                    @Html.DisplayFor(modelItem => ThanhTien)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
+                                </td>
+                                <td>
+                                    Ngay lập
+                                </td>
+
+
+
+
+
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
-        
+
+    </div>
+
+    <div class="tile">
+        <h3 class="tile-title">Tổng quan hóa đơn</h3>
+        <div class="row">
+            <div class="col-sm-12">
+                <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                    @*//Phần render từng dòng trong C#*@
+                    <thead>
+                        <tr role="row">
+                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã hóa đơn: activate to sort column ascending" style="width: 100px;">Mã hóa đơn</th>
+                            <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 100px;">Mã đại lý</th>
+                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 160px;">Tên đại lý</th>
+                            <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng tiền: activate to sort column ascending" style="width: 100px;">Tổng hóa đơn</th>
+                            <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 100px;">Mã nhân viên</th>
+                            <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Ngày lập: activate to sort column ascending" style="width: 120px;">Ngày lập</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 </div>
 
