--- a/Test02/Views/KeToan/XoaHD.cshtml
+++ b/Test02/Views/KeToan/XoaHD.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Test02.Models.HoaDon
-
+@using Test02.Models;
 @{
     ViewBag.Title = "XoaHD";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.nd = "Xóa hóa đơn";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
 <div class="row">
@@ -14,11 +15,19 @@
             <div>
                 <h4 style="align-content:center">HÓA ĐƠN BÁN HÀNG @Model.MaHD</h4>
                 <hr />
-                <p> <strong>@Html.DisplayNameFor(model => model.MaHD): </strong>@Html.DisplayFor(model => model.MaHD)</p>
-                <p> <strong>@Html.DisplayNameFor(model => model.MaDH): </strong>@Html.DisplayFor(model => model.MaDH)</p>
-                <p> <strong>@Html.DisplayNameFor(model => model.TenDVTiepNhan): </strong>@Html.DisplayFor(model => model.TenDVTiepNhan)</p>
-                <p> <strong>@Html.DisplayNameFor(model => model.TongTien): </strong>@Html.DisplayFor(model => model.TongTien)</p>
+                <p> <strong>Mã hóa đơn: </strong>@Html.DisplayFor(model => model.MaHD)</p>
+                <p> <strong>Mã Nhân viên tiếp nhận: </strong>@Html.DisplayFor(model => model.TenDVTiepNhan)</p>
+                @{ var mahd = db.DonHangs.Where(s => s.MaDH == Model.MaDH).FirstOrDefault(); ;
+                }
+                <p><strong>Mã đại lý:</strong> @mahd.MaDL</p>
 
+                @{
+                    var tendl = db.DaiLies.Where(s => s.MaDL == mahd.MaDL).FirstOrDefault();
+                }
+                <p><strong>Tên đại lý:</strong> @tendl.TenDL</p>
+
+                @{ var tongien = string.Format("{0:0,0 vnđ}", Model.TongTien);}
+                <p> <strong>Thành tiền: </strong>@Html.DisplayFor(model => tongien)</p>
 
 
                 @using (Html.BeginForm())
