--- a/Test02/Views/KinhDoanh/ChinhSuaCTDH.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaCTDH.cshtml
@@ -23,6 +23,7 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.MaCTDH)
+                @Html.HiddenFor(model => model.DonGia)
                 @Html.HiddenFor(model => model.MaDH)
                 @Html.HiddenFor(model => model.ChietKhau)
                 @Html.HiddenFor(model => model.ThanhTien)
@@ -41,36 +42,8 @@
                         @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DonViTinh, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        <select class="form-control" id="DonViTinh" name="DonViTinh">
-                            <option selected="@Model.DonViTinh">@Model.DonViTinh</option>
-                            <option value="Thùng">Thùng</option>
-                            <option value="Lon">Lon</option>
-                            <option value="Chai">Chai</option>
-                            <option value="Lốc (6 lon)">Lốc (6 lon)</option>
-                            <option value="Lốc (6 chai)">Lốc (6 chai)</option>
-                        </select>
-                    </div>
-                    @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DonGia, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.DonGia, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DiemGiao, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.DiemGiao, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DiemGiao, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
