--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -76,7 +76,7 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.hd" href="~/KinhDoanh/QuanLyHD">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Danh sách hóa đơn</span>
+                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Doanh số bán hàng </span>
                 </a>
             </li>
             <li>
