--- a/Test02/Views/KinhDoanh/ThemCTHD.cshtml
+++ b/Test02/Views/KinhDoanh/ThemCTHD.cshtml
@@ -20,6 +20,7 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.MaCTDH)
                     @Html.HiddenFor(model => model.MaDH)
+                    @Html.HiddenFor(model =>model.DonGia)
                     <div class="form-group">
                         @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
@@ -30,22 +31,6 @@
                         @Html.LabelFor(model => model.SoLuong, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.DonGia, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.DonGia, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.DonViTinh, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <select class="form-control" id="DonViTinh" name="DonViTinh">
-                            <option value="Thùng">Thùng</option>
-                            <option value="Lon">Lon</option>
-                            <option value="Chai">Chai</option>
-                            <option value="Lốc (6 lon)">Lốc (6 lon)</option>
-                            <option value="Lốc (6 chai)">Lốc (6 chai)</option>
-                        </select>
-                        @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
