--- a/Test02/Views/KinhDoanh/ThemCTHD1.cshtml
+++ b/Test02/Views/KinhDoanh/ThemCTHD1.cshtml
@@ -15,13 +15,13 @@
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <h4>Tạo đơn hàng</h4>
+                <h4>Thêm mới sản phẩm</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.MaCTDH)
                 @Html.HiddenFor(model => model.MaDH)
                 <div class="form-group">
-                    @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <label class="control-label col-md-2" >Tên sản phẩm</label>
                     @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
                 </div>
@@ -30,27 +30,6 @@
                     @Html.LabelFor(model => model.SoLuong, htmlAttributes: new { @class = "control-label col-md-2" })
                     @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DonGia, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.DonGia, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DonGia, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DonViTinh, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <select class="form-control" id="DonViTinh" name="DonViTinh">
-                        <option value="Thùng">Thùng</option>
-                        <option value="Lon">Lon</option>
-                        <option value="Chai">Chai</option>
-                        <option value="Lốc (6 lon)">Lốc (6 lon)</option>
-                        <option value="Lốc (6 chai)">Lốc (6 chai)</option>
-                    </select>
-                    @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DiemGiao, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.DiemGiao, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DiemGiao, "", new { @class = "text-danger" })
                 </div>
             </div>
 
