--- a/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
+++ b/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
@@ -21,7 +21,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="form-group col-md-12">
-                <label class="control-label">Nội dung: </label>
+                <label class="control-label">Xuất tại kho: </label>
                 <input class="form-control" type="text" required>
             </div>
             <div class="form-group col-md-12">
