--- a/Test02/Views/PhongKho/TaoPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/TaoPhieuNhapKho.cshtml
@@ -1,97 +1,133 @@
-﻿
+﻿@model Test02.Models.SanPham
 @{
     ViewBag.Title = "TaoPhieuNhapKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.nk = "active";
-    ViewBag.Name = "Tạo phiếu nhập kho";
+    ViewBag.Name = "Tạo phiếu đề nghị nhập kho";
 }
 
-<div class="tile">
-    <div class="tile-body">
-        <h3 style="text-align:center">PHIẾU NHẬP KHO</h3>
-        <form style="text-align:center">
-            <label for="date">Ngày:</label>
-            <input type="date" id="clock" class="date" name="ngay"><br>
-            <label for="number">Mã số:</label>
-            <input type="text" id="number" name="maso"> <br>
-        </form>
-        <form class="row">
-            <div class="form-group col-md-12">
-                <label class="control-label">Họ tên người tạo phiếu: </label>
-                <input class="form-control" type="text">
+<div class="row">
+    <div class="col-md-12">
+        <div class="tile">
+            <h2 style="text-align:center">PHIẾU ĐỀ NGHỊ NHẬP KHO</h2>
+            <form style="text-align:center">
+                <label for="date">Ngày:</label>
+                <input type="date" id="clock" class="date" name="ngay"><br>
+                <br>
+            </form>
+            <div class="tile-body">
+                <form class="row">
+                    <div class="form-group col-md-12">
+                        <label class="control-label">Kính gửi: </label>
+                        <input class="form-control" type="text">
+                    </div>
+                    <div class="form-group col-md-12">
+                        <label class="control-label">Nhập vào kho: </label>
+                        <input class="form-control" type="text" required>
+                    </div>
+                    <div class="form-group col-md-12">
+                        <label class="control-label">Họ tên người làm phiếu:</label>
+                        <input class="form-control" type="text" required>
+                    </div>
+                    <div class="form-group col-md-12" style="text-align:center;">
+                        <label class="control-label">Sản phẩm cần nhập kho: </label>
+                        <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0">
+                            <thead>
+                                <tr>
+                                    <th>STT</th>
+                                    <th>Mã sản phẩm</th>
+                                    <th>Đơn vị tính</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>
+                                        @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                                    </td>
+                                    <td>
+                                        <select class="form-control" id="DonViTinh" name="DonViTinh">
+                                            <option value="Lốc">Lốc </option>
+                                            <option value="Thùng">Thùng</option>
+                                            <option value="Lon">Lon</option>
+                                            <option value="Chai">Chai</option>
+                                        </select>
+                                        @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>
+                                        @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                                    </td>
+                                    <td>
+                                        <select class="form-control" id="DonViTinh" name="DonViTinh">
+                                            <option value="Lốc">Lốc </option>
+                                            <option value="Thùng">Thùng</option>
+                                            <option value="Lon">Lon</option>
+                                            <option value="Chai">Chai</option>
+                                        </select>
+                                        @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>
+                                        @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                                    </td>
+                                    <td>
+                                        <select class="form-control" id="DonViTinh" name="DonViTinh">
+                                            <option value="Lốc">Lốc </option>
+                                            <option value="Thùng">Thùng</option>
+                                            <option value="Lon">Lon</option>
+                                            <option value="Chai">Chai</option>
+                                        </select>
+                                        @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <
+                                    <td>4</td>
+                                    <td>
+                                        @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                                    </td>
+                                    <td>
+                                        <select class="form-control" id="DonViTinh" name="DonViTinh">
+                                            <option value="Lốc">Lốc </option>
+                                            <option value="Thùng">Thùng</option>
+                                            <option value="Lon">Lon</option>
+                                            <option value="Chai">Chai</option>
+                                        </select>
+                                        @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>
+                                        @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+                                    </td>
+                                    <td>
+                                        <select class="form-control" id="DonViTinh" name="DonViTinh">
+                                            <option value="Lốc">Lốc </option>
+                                            <option value="Thùng">Thùng</option>
+                                            <option value="Lon">Lon</option>
+                                            <option value="Chai">Chai</option>
+                                        </select>
+                                        @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </form>
+                <button class="btn btn-save" type="button">Lưu và gửi</button>
+                <a class="btn btn-cancel" href="QuanLyDL">Hủy bỏ</a>
             </div>
-            <div class="form-group col-md-12">
-                <label class="control-label">Mã hóa đơn nhập: </label>
-                <input class="form-control" type="text" required>
-            </div>
-            <div class="form-group col-md-12">
-                <label class="control-label">Nhập tại kho:</label>
-                <input class="form-control" type="text" required>
-            </div>
-            <div class="form-group col-md-12">
-                <label class="control-label">Địa điểm:</label>
-                <input class="form-control" type="text" required>
-            </div>
-            <div class="form-group col-md-12">
-                <label class="control-label">Danh sách sản phẩm cần nhập:</label>
-                <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0">
-                    <thead>
-                        <tr>
-                            <th>STT</th>
-                            <th>Mã sản phẩm</th>
-                            <th>Tên sản phẩm</th>
-                            <th>Đơn vị tính</th>
-                            <th>Số lượng</th>
-                            <th>Đơn giá</th>
-                            <th>Thành tiền</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><input class="form-control" type="text" placeholder="1" required></td>
-                            <td><input class="form-control" type="text" placeholder="CL89937" required></td>
-                            <td><input class="form-control" type="text" placeholder="Coca Cola" required></td>
-                            <td><input class="form-control" type="text" placeholder="Lon" required></td>
-                            <td><input class="form-control" type="text" placeholder="9023" required></td>
-                            <td><input class="form-control" type="text" placeholder="70.000" required></td>
-                            <td><input class="form-control" type="text" placeholder="3.000.000" required></td>
-                        </tr>
-                        <tr>
-                            <td><input class="form-control" type="text" placeholder="2" required></td>
-                            <td><input class="form-control" type="text" placeholder="CL89937" required></td>
-                            <td><input class="form-control" type="text" placeholder="Coca Cola" required></td>
-                            <td><input class="form-control" type="text" placeholder="Lon" required></td>
-                            <td><input class="form-control" type="text" placeholder="9023" required></td>
-                            <td><input class="form-control" type="text" placeholder="70.000" required></td>
-                            <td><input class="form-control" type="text" placeholder="3.000.000" required></td>
-                        </tr>
-                        <tr>
-                            <td><input class="form-control" type="text" placeholder="3" required></td>
-                            <td><input class="form-control" type="text" placeholder="CL89937" required></td>
-                            <td><input class="form-control" type="text" placeholder="Coca Cola" required></td>
-                            <td><input class="form-control" type="text" placeholder="Lon" required></td>
-                            <td><input class="form-control" type="text" placeholder="9023" required></td>
-                            <td><input class="form-control" type="text" placeholder="70.000" required></td>
-                            <td><input class="form-control" type="text" placeholder="3.000.000" required></td>
-                        </tr>
-                        <tr>
-                            <td><input class="form-control" type="text" placeholder="4" required></td>
-                            <td><input class="form-control" type="text" placeholder="CL89937" required></td>
-                            <td><input class="form-control" type="text" placeholder="Coca Cola" required></td>
-                            <td><input class="form-control" type="text" placeholder="Lon" required></td>
-                            <td><input class="form-control" type="text" placeholder="9023" required></td>
-                            <td><input class="form-control" type="text" placeholder="70.000" required></td>
-                            <td><input class="form-control" type="text" placeholder="3.000.000" required></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="form-group  col-md-12">
-                <label class="control-label">Tổng số tiền (viết bằng chữ):</label>
-                <input class="form-control" type="text" required>
-            </div>
-        </form>
-        <button class="btn btn-save" type="button">Lưu phiếu</button>
-        <a class="btn btn-cancel" href="NhapKho">Hủy bỏ</a>
+        </div>
     </div>
 </div>
